--- a/input.scss
+++ b/input.scss
@@ -126,6 +126,7 @@ button {
         background-color: $secondary;
         border-radius: 0 0 5px 5px;
         cursor: pointer;
+        @include box-shadow-default();
       }
     }
 
@@ -200,7 +201,7 @@ button {
     }
 
     .cat-logo {
-      bottom: -0.95vw;
+      bottom: -1.1vw;
       left: 3vw;
       width: clamp(60px, 4vw, 100px);
     }
@@ -373,7 +374,7 @@ button {
       &::before, &::after {
         content: "";
         position: absolute;
-        bottom: -3vh;
+        bottom: -2vh;
         width: 100%;
         height: 140%;
         background-color: #fff;
@@ -818,7 +819,10 @@ button {
         }
       }
 
-      button { font-size: clamp(1.2rem, 1.3vw, 1.4rem); }
+      button {
+        padding: 14px 0;
+        font-size: clamp(1.2rem, 1.3vw, 1.4rem);
+      }
     }
   }
 }
@@ -837,6 +841,8 @@ button {
       .event-description {
         margin: 0 auto;
       }
+
+      button { padding: 16px 0; }
     }
   }
 }
@@ -1176,7 +1182,7 @@ button {
 @media only screen and (min-width: 640px) {
   #reserve-now {
     margin-bottom: 9.4rem;
-    padding-top: 80px;
+    padding-top: 100px;
     padding-bottom: 100px;
     gap: 0;
     
@@ -1208,8 +1214,6 @@ button {
 @media only screen and (min-width: 860px) {
   #reserve-now {
     margin-bottom: 150px;
-    padding-top: 80px;
-    padding-bottom: 136px;
     
     h2 { font-size: clamp(2rem, 3vw, 2.25rem); }
 
@@ -1232,7 +1236,10 @@ button {
 }
 @media only screen and (min-width: 1440px) {
   #reserve-now {
+    max-width: 1800px;
     margin-bottom: 200px;
+    padding-left: 6vw;
+    padding-right: 6vw;
 
     h2 {
       margin-bottom: 100px;
@@ -1240,14 +1247,17 @@ button {
     }
 
     #reservation-options > .reservation-option {
-      width: 25%;
+      width: 30%;
       height: 100%;
 
       p:first-child {
-        width: 80%;
-        font-size: clamp(1.2rem, 1.3vw, 2rem);
+        width: 110%;
+        font-size: clamp(1.2rem, 1.6vw, 2rem);
       }
-      p:nth-child(2) { font-size: clamp(1rem, 1.2vw, 1.6rem); }
+      p:nth-child(2) {
+        min-height: 85px;
+        font-size: clamp(1rem, 1.2vw, 1.6rem);
+      }
 
       button {
         padding-left: 42px;
